--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -30,7 +31,7 @@
         <h3>Contact</h3>
         <p>
           <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-          +1 710 555 1234<br>
+          +1 10 555 1234<br>
           @fakeRealty
         </p>
       </div>
